trunk/Archive2/36/9709344855ef4a/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include 
   ^
main.cpp:3:10: error: stray '#' in program
 <string> # include 
          ^
main.cpp:9:9: error: stray '\303' in program
         " \ " Eu sei, eu vou usar expressões regulares. \ " " 
         ^
main.cpp:9:9: error: stray '\265' in program
main.cpp:9:9: error: stray '\' in program
main.cpp:15:26: warning: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wliteral-suffix]
         std :: cout  <<  "O texto contém a frase "expressões regulares" \ n " ; 
                          ^
main.cpp:15:9: error: stray '\303' in program
         std :: cout  <<  "O texto contém a frase "expressões regulares" \ n " ; 
         ^
main.cpp:15:9: error: stray '\265' in program
main.cpp:20:9: error: stray '\303' in program
         std :: sregex_iterator ( s. começar ( ) , s. final ( ) , word_regex ) ; 
         ^
main.cpp:20:9: error: stray '\247' in program
main.cpp:24:9: error: stray '\303' in program
         <<  std :: distância ( words_begin, words_end ) 
         ^
main.cpp:24:9: error: stray '\242' in program
main.cpp:28:53: warning: missing terminating " character [enabled by default]
     std :: cout  <<  "Palavras maior que"  << N <<  " 
                                                     ^
main.cpp:28:5: error: missing terminating " character
     std :: cout  <<  "Palavras maior que"  << N <<  " 
     ^
main.cpp:29:6: warning: missing terminating " character [enabled by default]
      " << match_str << ' \ n ' ; } }  
      ^
main.cpp:29:6: error: missing terminating " character
main.cpp:39:32: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  << new_s < <  ' \ n ' ; 
                                ^
main.cpp:39:32: warning: multi-character character constant [-Wmultichar]
main.cpp:3:1: error: expected unqualified-id before '<' token
 <string> # include 
 ^
In file included from /usr/include/c++/4.8/functional:53:0,
                 from /usr/include/c++/4.8/bits/stl_algo.h:66,
                 from /usr/include/c++/4.8/algorithm:62,
                 from /usr/include/c++/4.8/regex:38,
                 from main.cpp:4:
/usr/include/c++/4.8/typeinfo:39:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
